# Zygisk-MyInjector

./: .gitignore  README.md  README.zh-CN.md  build.gradle  build_all.sh  gradle.properties  module.gradle  settings.gradle
.github/workflows/: build-release.yml  build.yml  ci.yml
configapp/: build.gradle
configapp/src/main/: AndroidManifest.xml
configapp/src/main/java/com/jiqiu/configapp/: AppInfo.java  (+15 more)
configapp/src/main/res/drawable/: system_app_badge.xml
configapp/src/main/res/layout/: activity_app_so_config.xml  activity_file_browser.xml  activity_main.xml  dialog_app_config.xml  dialog_gadget_config.xml  dialog_input.xml  fragment_app_list.xml  fragment_kpm_hide.xml  fragment_settings.xml  fragment_so_manager.xml  item_app.xml  item_file.xml  item_hide_so.xml  item_so_file.xml  item_so_selection.xml
configapp/src/main/res/menu/: bottom_nav_menu.xml
configapp/src/main/res/values/: strings.xml  themes.xml
configapp/src/main/res/values-night/: themes.xml
module/: build.gradle  service.sh
module/kpm/: injectHide.kpm
module/src/main/cpp/: CMakeLists.txt  config.cpp  config.h  game.h  hack.cpp  hack.h  hack_new.cpp  log.h  main.cpp  newriruhide.cpp  newriruhide.h  pmparser.cpp  pmparser.h
module/src/main/cpp/mylinker/: CMakeLists.txt  elf_loader.cpp  elf_reader.cpp  main.cpp  memory_manager.cpp  mylinker.cpp  relocator.cpp  soinfo_manager.cpp  utils.cpp
module/src/main/cpp/mylinker/include/: common.h  elf_loader.h  elf_reader.h  memory_manager.h  mylinker.h  relocator.h  soinfo_manager.h  utils.h
scripts/: .gitignore  README.md  auto_config.py
(+2 files in other folders)
